[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aap-python"
version = "0.1.0"
description = "Agent Action Protocol — cryptographic flight recorder for autonomous agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = [
    "agent", "ai", "autonomy", "traceability", "audit",
    "deterministic", "runtime", "blackbox", "aap",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []  # zero dependencies — stdlib only

[project.optional-dependencies]
langchain = ["langchain-core>=0.1.0"]
openai    = ["openai>=1.0.0"]
dev       = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[project.urls]
Homepage   = "https://github.com/your-org/blackbox"
Repository = "https://github.com/your-org/blackbox"
Issues     = "https://github.com/your-org/blackbox/issues"

[project.scripts]
blackbox-py = "aap.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["aap"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
